--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,20 @@ environment:
 dependencies:
   animate_do: ^3.1.2
   auto_mappr: ^2.4.0
+  awesome_snackbar_content: ^0.1.3
   build_runner: ^2.4.9
   cupertino_icons: ^1.0.2
   dio: ^5.4.1
   drift: ^2.17.0
   drift_dev: ^2.17.0
+  dropdown_search: ^5.0.6
   elegant_notification: ^2.1.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_dotenv: ^5.1.0
+  flutter_dropdown_search: ^0.0.4
   get_it: ^7.6.4
   go_router: ^13.2.0
   hexcolor: ^3.0.1
